fix alignment

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -7,7 +7,7 @@ body{
 
 .register-form{
     background-color: rgba(246, 251, 252, 0.93);
-    padding: 1px 40px 90px 40px;
+    padding: 1px 40px 70px 40px;
     margin-top: 1vh;
 }
 
@@ -19,11 +19,6 @@ h1{
 }
 
 .button-container{
-    margin-top: 3vh;
-    float: right;
-}
-
-.button-container{
-    margin-top: 3vh;
+    margin-top: 0px !important;
     float: right;
 }
